--- a/conf/api_setup_params.yaml
+++ b/conf/api_setup_params.yaml
@@ -1,6 +1,7 @@
 database_connector_type : 'SQLALCHEMY'
 base_url : 'postgresql+psycopg2://postgres:mysecretpassword@localhost:5432/mytestdb'
 access_key : access_key
+db_access_key : db_access_key
 # database_connector_type : 'Mocker'
 # base_url : 'http://localhost:8001'
 chunk_size : 3000000
